--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ function render() {
     scene.className = "scene scene-black";
     scene.innerHTML = `
       <div class="subtitle">
-        كان السيد chergui الأكثر وسامة على هذه الأرض،
+        كان السيد شرقي الأكثر وسامة على هذه الأرض،
         كاريزميًا وجذابًا، يراجع عددًا لا متناهيًا من رسائل البريد
         الإلكتروني حول جودة المصانع والمتاجر العالمية في ولاية
         كاليفورنيا، بينما يراقب الساعة أمامه باستمرار.
