--- a/index.html
+++ b/index.html
@@ -63,9 +63,18 @@ button:hover { opacity: 0.7; }
   gap: 30px;
   margin-top: 40px;
 }
-.card-buttons button {
-  font-size: 22px;
-  padding: 14px 28px;
+
+/* ===== الصور مع fade ===== */
+.scene img {
+  max-width: 60%;
+  margin-top: 30px;
+  opacity: 0;
+  animation: fadeIn 1.2s ease forwards;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 </style>
 </head>
@@ -99,6 +108,8 @@ function render() {
         الإلكتروني حول جودة المصانع والمتاجر العالمية في ولاية
         كاليفورنيا، بينما يراقب الساعة أمامه باستمرار.
       </div>
+      <img src="ayoub1.png">
+      <img src="ayoub2.png">
       <button class="small-btn" onclick="next()">tick</button>
     `;
   }
@@ -132,6 +143,7 @@ function render() {
         التقت أعين السيد شرقي بخاصة صديقه إلياس<br>
         وقالا في نفس الوقت
       </div>
+      <img src="ilyas.png">
       <div class="subtitle" style="margin-top:40px;">
         YO boy let’s walk out together
       </div>
@@ -146,6 +158,7 @@ function render() {
         كان السيد شرقي يترنّح مع صديقه في الطرقات،
         فقد أرادا الاحتفال بأيوب الكبير وبعيد ميلاده.
       </div>
+      <img src="metthedevil (1).jpg">
       <div class="subtitle">
         لكن في آخر الشارع ظهر شيءٌ لم يكن متوقعًا.<br><br>
         شيطان.
@@ -179,25 +192,21 @@ function render() {
         دخل السيد شرقي مع ما يعتقد أنه الشيطان
         إلى حانةٍ لم يرها من قبل.
       </div>
-
+      <img src="girls.png">
       <div class="subtitle">
         راقصات… ساقيات… نادلات…
       </div>
-
       <div class="subtitle">
         كان هو الرجل الوحيد هناك،
         تحيط به آلاف الأجساد،
         وكادت النظرات أن تثقب ملابسه.
       </div>
-
       <div class="subtitle" style="margin-top:40px;">
         he gets anybody's eyes undressing him
       </div>
-
       <div class="subtitle">
         لكن الجو خانق بالفعل
       </div>
-
       <button class="small-btn" onclick="next()">تحدث مع الشيطان</button>
     `;
   }
@@ -209,12 +218,10 @@ function render() {
         قال أيوب:<br><br>
         “What do you want?”
       </div>
-
       <div class="subtitle">
         ابتسم الشيطان وقال:<br><br>
         “I just want you to enjoy, buddy.”
       </div>
-
       <button class="small-btn" onclick="next()">cool</button>
     `;
   }
@@ -225,14 +232,12 @@ function render() {
       <div class="subtitle">
         قال الشيطان وهو يمدّ يده:
       </div>
-
       <div class="subtitle">
         “It’s your lucky day.<br>
         I usually give people one Joker card…<br>
         But I’ll give you three.<br><br>
         Choose the one that feels like you.”
       </div>
-
       <button class="small-btn" onclick="next()">حسنًا</button>
     `;
   }
@@ -244,16 +249,14 @@ function render() {
         لكن لا تثق بحدسك…<br>
         فالبشر عادةً يخسرون الكثير بسببه.
       </div>
-
       <div class="card-buttons">
-        <button onclick="chooseCard()">1</button>
-        <button onclick="chooseCard()">2</button>
-        <button onclick="chooseCard()">3</button>
+        <img src="card1.png" onclick="chooseCard()">
+        <img src="card2.png" onclick="chooseCard()">
+        <img src="card3.png" onclick="chooseCard()">
       </div>
     `;
   }
 
-  /* ===== الوشم ===== */
   else if (step === 11) {
     scene.className = "scene scene-black";
     scene.innerHTML = `
@@ -272,32 +275,27 @@ function render() {
     `;
   }
 
-  /* ===== شيطان غاضب ===== */
   else if (step === 12) {
     scene.className = "scene scene-red";
     scene.innerHTML = `
-      <div class="subtitle">
-        <!-- صورة الشيطان الغاضب ستضاف لاحقًا -->
-      </div>
+      <img src="angry.png">
       <button class="small-btn" onclick="next()">...</button>
     `;
   }
 
-  /* ===== الإفاقة ===== */
   else if (step === 13) {
     scene.className = "scene scene-black";
     scene.innerHTML = `
+      <img src="the devil.png">
       <div class="subtitle">
         وجد السيد شرقي نفسه خارج الحانة،
         ملقىً على الأرض.
       </div>
-
       <div class="subtitle">
         كان إلياس يهزه:<br><br>
         صديقي… هل أنت بخير؟<br>
         لقد فقدت وعيك فجأة.
       </div>
-
       <button class="small-btn">
         أنا… أنا بخير
       </button>
