--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>A Strange Day</title>
+<title>A Strange BirthDay</title>
 
 <style>
 body {
@@ -108,8 +108,8 @@ function render() {
         الإلكتروني حول جودة المصانع والمتاجر العالمية في ولاية
         كاليفورنيا، بينما يراقب الساعة أمامه باستمرار.
       </div>
-      <img src="ayoub1.png">
-      <img src="ayoub2.png">
+      <img src="ayoub1.png.jpg">
+      <img src="ayoub2.png.jpb">
       <button class="small-btn" onclick="next()">tick</button>
     `;
   }
@@ -143,7 +143,7 @@ function render() {
         التقت أعين السيد شرقي بخاصة صديقه إلياس<br>
         وقالا في نفس الوقت
       </div>
-      <img src="ilyas.png">
+      <img src="ilyas.png.jpg">
       <div class="subtitle" style="margin-top:40px;">
         YO boy let’s walk out together
       </div>
@@ -192,7 +192,7 @@ function render() {
         دخل السيد شرقي مع ما يعتقد أنه الشيطان
         إلى حانةٍ لم يرها من قبل.
       </div>
-      <img src="girls.png">
+      <img src="girls.png.jpg">
       <div class="subtitle">
         راقصات… ساقيات… نادلات…
       </div>
@@ -250,9 +250,9 @@ function render() {
         فالبشر عادةً يخسرون الكثير بسببه.
       </div>
       <div class="card-buttons">
-        <img src="card1.png" onclick="chooseCard()">
-        <img src="card2.png" onclick="chooseCard()">
-        <img src="card3.png" onclick="chooseCard()">
+        <img src="card1.png.jpg" onclick="chooseCard()">
+        <img src="card2.png.jpg" onclick="chooseCard()">
+        <img src="card3.png.jpg" onclick="chooseCard()">
       </div>
     `;
   }
@@ -278,7 +278,7 @@ function render() {
   else if (step === 12) {
     scene.className = "scene scene-red";
     scene.innerHTML = `
-      <img src="angry.png">
+      <img src="thedevil.png.jpg">
       <button class="small-btn" onclick="next()">...</button>
     `;
   }
@@ -286,7 +286,6 @@ function render() {
   else if (step === 13) {
     scene.className = "scene scene-black";
     scene.innerHTML = `
-      <img src="the devil.png">
       <div class="subtitle">
         وجد السيد شرقي نفسه خارج الحانة،
         ملقىً على الأرض.
