--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@ button:hover { opacity: 0.7; }
   margin-top: 40px;
 }
 
-/* ===== الصور مع fade ===== */
 .scene img {
   max-width: 60%;
   margin-top: 30px;
@@ -108,8 +107,8 @@ function render() {
         الإلكتروني حول جودة المصانع والمتاجر العالمية في ولاية
         كاليفورنيا، بينما يراقب الساعة أمامه باستمرار.
       </div>
-      <img src="ayoub1.png.jpg">
-      <img src="ayoub2.png.jpb">
+      <img src="ayoub1.jpg">
+      <img src="ayoub2.jpg">
       <button class="small-btn" onclick="next()">tick</button>
     `;
   }
@@ -143,7 +142,7 @@ function render() {
         التقت أعين السيد شرقي بخاصة صديقه إلياس<br>
         وقالا في نفس الوقت
       </div>
-      <img src="ilyas.png.jpg">
+      <img src="ilyas.jpg">
       <div class="subtitle" style="margin-top:40px;">
         YO boy let’s walk out together
       </div>
@@ -158,7 +157,7 @@ function render() {
         كان السيد شرقي يترنّح مع صديقه في الطرقات،
         فقد أرادا الاحتفال بأيوب الكبير وبعيد ميلاده.
       </div>
-      <img src="metthedevil (1).jpg">
+      <img src="metthedevil.jpg">
       <div class="subtitle">
         لكن في آخر الشارع ظهر شيءٌ لم يكن متوقعًا.<br><br>
         شيطان.
@@ -192,7 +191,7 @@ function render() {
         دخل السيد شرقي مع ما يعتقد أنه الشيطان
         إلى حانةٍ لم يرها من قبل.
       </div>
-      <img src="girls.png.jpg">
+      <img src="girls.jpg">
       <div class="subtitle">
         راقصات… ساقيات… نادلات…
       </div>
@@ -250,9 +249,9 @@ function render() {
         فالبشر عادةً يخسرون الكثير بسببه.
       </div>
       <div class="card-buttons">
-        <img src="card1.png.jpg" onclick="chooseCard()">
-        <img src="card2.png.jpg" onclick="chooseCard()">
-        <img src="card3.png.jpg" onclick="chooseCard()">
+        <img src="card1.jpg" onclick="chooseCard()">
+        <img src="card2.jpg" onclick="chooseCard()">
+        <img src="card3.jpg" onclick="chooseCard()">
       </div>
     `;
   }
@@ -278,7 +277,7 @@ function render() {
   else if (step === 12) {
     scene.className = "scene scene-red";
     scene.innerHTML = `
-      <img src="thedevil.png.jpg">
+      <img src="thedevil.jpg">
       <button class="small-btn" onclick="next()">...</button>
     `;
   }
