--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@ function render() {
         الإلكتروني حول جودة المصانع والمتاجر العالمية في ولاية
         كاليفورنيا، بينما يراقب الساعة أمامه باستمرار.
       </div>
-      <img src="ayoub1.jpg">
-      <img src="ayoub2.jpg">
+      <img src="images/ayoub1.jpg">
+      <img src="images/ayoub2.jpg">
+
       <button class="small-btn" onclick="next()">tick</button>
     `;
   }
@@ -142,7 +143,7 @@ function render() {
         التقت أعين السيد شرقي بخاصة صديقه إلياس<br>
         وقالا في نفس الوقت
       </div>
-      <img src="ilyas.jpg">
+      <img src="images/ilyas.jpg">
       <div class="subtitle" style="margin-top:40px;">
         YO boy let’s walk out together
       </div>
@@ -157,7 +158,7 @@ function render() {
         كان السيد شرقي يترنّح مع صديقه في الطرقات،
         فقد أرادا الاحتفال بأيوب الكبير وبعيد ميلاده.
       </div>
-      <img src="metthedevil.jpg">
+      <img src="images/metthedevil.jpg">
       <div class="subtitle">
         لكن في آخر الشارع ظهر شيءٌ لم يكن متوقعًا.<br><br>
         شيطان.
@@ -191,7 +192,7 @@ function render() {
         دخل السيد شرقي مع ما يعتقد أنه الشيطان
         إلى حانةٍ لم يرها من قبل.
       </div>
-      <img src="girls.jpg">
+      <img src="images/girls.jpg">
       <div class="subtitle">
         راقصات… ساقيات… نادلات…
       </div>
@@ -249,9 +250,9 @@ function render() {
         فالبشر عادةً يخسرون الكثير بسببه.
       </div>
       <div class="card-buttons">
-        <img src="card1.jpg" onclick="chooseCard()">
-        <img src="card2.jpg" onclick="chooseCard()">
-        <img src="card3.jpg" onclick="chooseCard()">
+        <img src="images/card1.jpg" onclick="chooseCard()">
+        <img src="images/card2.jpg" onclick="chooseCard()">
+        <img src="images/card3.jpg" onclick="chooseCard()">
       </div>
     `;
   }
@@ -277,7 +278,7 @@ function render() {
   else if (step === 12) {
     scene.className = "scene scene-red";
     scene.innerHTML = `
-      <img src="thedevil.jpg">
+      <img src="images/thedevil.jpg">
       <button class="small-btn" onclick="next()">...</button>
     `;
   }
