--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ function render() {
         الإلكتروني حول جودة المصانع والمتاجر العالمية في ولاية
         كاليفورنيا، بينما يراقب الساعة أمامه باستمرار.
       </div>
-      <img src="images/ayoub1.jpg">
-      <img src="images/ayoub2.jpg">
+      <img src="./images/ayoub1.jpg">
+      <img src="./images/ayoub2.jpg">
 
       <button class="small-btn" onclick="next()">tick</button>
     `;
@@ -143,7 +143,7 @@ function render() {
         التقت أعين السيد شرقي بخاصة صديقه إلياس<br>
         وقالا في نفس الوقت
       </div>
-      <img src="images/ilyas.jpg">
+      <img src="./images/ilyas.jpg">
       <div class="subtitle" style="margin-top:40px;">
         YO boy let’s walk out together
       </div>
@@ -158,7 +158,7 @@ function render() {
         كان السيد شرقي يترنّح مع صديقه في الطرقات،
         فقد أرادا الاحتفال بأيوب الكبير وبعيد ميلاده.
       </div>
-      <img src="images/metthedevil.jpg">
+      <img src="./images/metthedevil.jpg">
       <div class="subtitle">
         لكن في آخر الشارع ظهر شيءٌ لم يكن متوقعًا.<br><br>
         شيطان.
@@ -192,7 +192,7 @@ function render() {
         دخل السيد شرقي مع ما يعتقد أنه الشيطان
         إلى حانةٍ لم يرها من قبل.
       </div>
-      <img src="images/girls.jpg">
+      <img src="./images/girls.jpg">
       <div class="subtitle">
         راقصات… ساقيات… نادلات…
       </div>
@@ -250,9 +250,9 @@ function render() {
         فالبشر عادةً يخسرون الكثير بسببه.
       </div>
       <div class="card-buttons">
-        <img src="images/card1.jpg" onclick="chooseCard()">
-        <img src="images/card2.jpg" onclick="chooseCard()">
-        <img src="images/card3.jpg" onclick="chooseCard()">
+        <img src="./images/card1.jpg" onclick="chooseCard()">
+        <img src="./images/card2.jpg" onclick="chooseCard()">
+        <img src="./images/card3.jpg" onclick="chooseCard()">
       </div>
     `;
   }
@@ -278,7 +278,7 @@ function render() {
   else if (step === 12) {
     scene.className = "scene scene-red";
     scene.innerHTML = `
-      <img src="images/thedevil.jpg">
+      <img src="./images/thedevil.jpg">
       <button class="small-btn" onclick="next()">...</button>
     `;
   }
