--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@ button:hover { opacity: 0.7; }
 }
 
 .scene img {
-  max-width: 60%;
-  margin-top: 30px;
+  max-width: 40%;
+  max-height: 45vh;
+  width: auto;
+  margin-top: 24px;
+  border-radius: 6px;
   opacity: 0;
   animation: fadeIn 1.2s ease forwards;
 }
+
 
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(10px); }
