--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@ button:hover { opacity: 0.7; }
   animation: fadeIn 1.2s ease forwards;
 }
 
-
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(10px); }
   to { opacity: 1; transform: translateY(0); }
@@ -112,7 +111,6 @@ function render() {
         كاليفورنيا، بينما يراقب الساعة أمامه باستمرار.
       </div>
       <img src="./images/ayoub1.jpg">
-
       <button class="small-btn" onclick="next()">tick</button>
     `;
   }
@@ -303,33 +301,26 @@ function render() {
       </button>
     `;
   }
-}
 
   else if (step === 14) {
-  scene.className = "scene scene-black";
-  scene.innerHTML = `
-    <div class="subtitle" style="font-size:28px;">
-      هل أنت متأكد أنك بخير؟<br>
-      لقد غبت عن الوعي لبضع دقائق.
-    </div>
-
-    <div class="card-buttons" style="margin-top:50px;">
-      <button onclick="next()" style="
-        font-size:18px;
-        padding:14px 32px;
-      ">
-        لقد أثّر علي ضغط العمل
-      </button>
-
-      <button onclick="next()" style="
-        font-size:18px;
-        padding:14px 32px;
-      ">
-        لم أمارس منذ مدة
-      </button>
-    </div>
-  `;
+    scene.className = "scene scene-black";
+    scene.innerHTML = `
+      <div class="subtitle" style="font-size:28px;">
+        هل أنت متأكد أنك بخير؟<br>
+        لقد غبت عن الوعي لبضع دقائق.
+      </div>
+      <div class="card-buttons" style="margin-top:50px;">
+        <button onclick="next()" style="font-size:18px; padding:14px 32px;">
+          لقد أثّر علي ضغط العمل
+        </button>
+        <button onclick="next()" style="font-size:18px; padding:14px 32px;">
+          لم أمارس منذ مدة
+        </button>
+      </div>
+    `;
+  }
 }
+
 function next() {
   step++;
   render();
