--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
 
 .scene-black { background: black; color: red; }
 .scene-red { background: red; color: black; }
-.scene-pink { background: #ffeef4; color: #333; }
+.scene-pink { background: pink; color: black; }
   
 .title { font-size: 42px; letter-spacing: 2px; }
 .title span { font-size: 56px; display: block; }
