--- a/index.html
+++ b/index.html
@@ -422,6 +422,37 @@ function render() {
       🤍 🌸 ☁️ 🤍 🌸 ☁️
     </div>
   `;
+}
+
+ else if (step === 20) {
+  scene.className = "scene scene-pink";
+  scene.innerHTML = `
+    <div class="decor">☁️ 🌸 🤍 ☁️ 🌸 🤍</div>
+
+    <div class="subtitle" style="color:black;">
+      انضمّ السيد شرقي إلى زوجته في الفراش،<br>
+      كان المكان دافئًا…<br>
+      ليس بدفء الجسد فقط،<br>
+      بل بدفء السكون.
+    </div>
+
+    <div class="subtitle" style="margin-top:30px; color:black;">
+      واجهته بنظراتها بهدوء،<br>
+      ثم قالت:
+    </div>
+
+    <div class="subtitle" style="margin-top:20px; font-size:26px; color:black;">
+      هل تريد أن تأكل؟
+    </div>
+
+    <button class="small-btn" style="margin-top:50px;" onclick="next()">
+      لست في مزاج يسمح… أنا متعب قليلًا
+    </button>
+
+    <div class="decor" style="margin-top:40px;">
+      🤍 🌸 ☁️ 🤍 🌸 ☁️
+    </div>
+  `;
   }
 }
   
