--- a/index.html
+++ b/index.html
@@ -414,9 +414,10 @@ function render() {
     <img src="./images/mary.jpg">
 
     <div class="buttons-row">
-      <button>قبّل رأسها</button>
-      <button>استلقِ بجانبها</button>
+      <button onclick="next()">قبّل رأسها</button>
+      <button onclick="next()">استلقِ بجانبها</button>
     </div>
+
 
     <div class="decor" style="margin-top:30px;">
       🤍 🌸 ☁️ 🤍 🌸 ☁️
