--- a/index.html
+++ b/index.html
@@ -530,6 +530,42 @@ else if (step === 23) {
       ...
     </button>
   `;
+} 
+
+else if (step === 24) {
+  scene.className = "scene scene-red";
+  scene.innerHTML = `
+    <div class="big-word" style="
+      font-size:64px;
+      color:black;
+      margin-bottom:36px;
+      letter-spacing:2px;
+    ">
+      god lord!<br>
+      have mercy ...
+    </div>
+
+    <div class="images-row" style="
+      gap:18px;
+      margin-top:10px;
+      margin-bottom:44px;
+    ">
+      <img src="./images/reaction1.jpg" style="
+        max-width:42%;
+        max-height:52vh;
+        border-radius:8px;
+      ">
+      <img src="./images/reaction2.jpg" style="
+        max-width:42%;
+        max-height:52vh;
+        border-radius:8px;
+      ">
+    </div>
+
+    <button class="small-btn" onclick="next()">
+      انقض عليها
+    </button>
+  `;
   }
 } 
   
