--- a/index.html
+++ b/index.html
@@ -562,9 +562,22 @@ else if (step === 24) {
       ">
     </div>
 
-    <button class="small-btn" onclick="next()">
-      انقض عليها
-    </button>
+    <button
+  onclick="next()"
+  style="
+    margin-top:20px;
+    padding:18px 52px;
+    font-size:22px;
+    border:2px solid black;
+    background:transparent;
+    color:black;
+    cursor:pointer;
+    letter-spacing:1px;
+  "
+>
+  انقض عليها
+</button>
+
   `;
   }
 } 
